--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,9 +1,25 @@
-<h2>Países</h2>
+<h2 class=" text-white">Países</h2>
 
 <hr>
 <ul class="list-group">
 
-  <li class="list-group-item">
+  <!-- <li routerLink='' routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="list-group-item">
     Home Page
+  </li>
+
+  <li routerLink="about" routerLinkActive="active" class="list-group-item">
+    About Page
+  </li>
+  <li routerLink="contact" routerLinkActive="active" class="list-group-item">
+    Contact Page
+  </li> -->
+  <li routerLink="countries/by-capital" routerLinkActive="active" class="list-group-item list-group-item-success">
+   Por Capital
+  </li>
+  <li routerLink="countries/by-country" routerLinkActive="active" class="list-group-item list-group-item-success">
+   Por País
+  </li>
+  <li routerLink="countries/by-region" routerLinkActive="active" class="list-group-item list-group-item-success">
+    por Region
   </li>
 </ul>
